trunk/Archive2/3e/03c2f03754c0e7/output
main.cpp: In function 'std::string foo(void (*)(void (*)(std::string)))':
main.cpp:19:20: error: cannot convert 'foo(void (*)(void (*)(std::string)))::<lambda(std::string)>' to 'void (*)(std::string) {aka void (*)(std::basic_string<char>)}' in argument passing
     bar(collectFunc);
                    ^
1
